# newcx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: main.yml
include/: cli.hpp  config.hpp  files.hpp  messages.hpp  project_generator.hpp
src/: main.cpp
src/common/: cli.cpp  config.cpp  files.cpp
src/generators/: c_generator.cpp  cxx_generator.cpp
src/newc/: main.cpp
src/newcpp/: main.cpp
